# jenkins-prove

./: CMakeLists.txt  Jenkinsfile  README.md
include/: mylib.h
src/: main.cpp  mylib.cpp
test/: test_mylib.cpp
